mgr: expose CRUSHMap.find_roots()

so mgr module could use it to enumerate all nodes without parents

See-also: https://tracker.ceph.com/issues/50971
Signed-off-by: Kefu Chai <kchai@redhat.com>